# YEEFDTD

./: .gitignore  CMakeLists.txt  LICENSE  PreProcess.py  README.md
doc/: fdtd-grid-properties.odt  fdtd-input-output.odt
include/: BivalueGridArrayManipulator.h  ChargedParticleEmitter.h  ChargedParticlesTracer.h  CollocatedGrid.h  Cone.h  Cylinder.h  DataFilePlaneWaveGridArrayManipulator.h  DataFilePlaneWaveVectorField.h  DataSampleFileReader.h  DataTruncationGridArrayManipulator.h  DataView.h  DemotableComplex.hpp  DiscretePointsGAMDataUpdater.h  DiscretePointsGridArrayManipulator.h  DiscretePointsScalarGridArrayManipulator.h  DiscretePointsVectorGridArrayManipulator.h  DiscreteScalarDataView.h  DiscreteVectorDataView.h  ElementType.h  FDInstructionCode.h  FDInstructionFactory.h  FowlerNordheimEmission.hpp  GaussianGridArrayManipulator.h  GaussianPlaneWaveGridArrayManipulator.h  GaussianPlaneWaveVectorField.h  GaussianSpaceTimeGridArrayManipulator.h  Geometry.h  Grid.h  GridArrayManipulator.h  GridCollectionParameterExtractor.h  GridElementView.h  GridPatch.h  Hyperboloid.h  ManualChargedParticleEmitter.h  MultiDimArray.hpp  MultiDimArray.hpp.sub  MultiDimArrayAllocator.hpp  MultiDimArrayBufferIO.hpp  MultiDimArrayFileIO.hpp  MultiDimArrayPrinting.hpp  (+32 more)
src/: BivalueGridArrayManipulator.cpp  ChargedParticleEmitter.cpp  ChargedParticlesTracer.cpp  Cone.cpp  Cylinder.cpp  DataFilePlaneWaveGridArrayManipulator.cpp  DataFilePlaneWaveVectorField.cpp  DataSampleFileReader.cpp  DataTruncationGridArrayManipulator.cpp  DataView.cpp  DiscretePointsGridArrayManipulator.cpp  (+39 more)
(+46 files in other folders)
